--- a/templates/campaign_detail.html
+++ b/templates/campaign_detail.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,15 +6,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>Document</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Startapp</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Explore <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/campaigns">Subscribe</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <hr>
     <h1>{{ campaign.name }}</h1>
     <hr>
     <p>{{ campaign.description }}</p>
     <img src="{{ campaign.image.url }}" alt="{{ campaign.name }}">
-    <p>Subscribers: {{ subscribers }}</p>
+    <p>Subscribers: {{ campaign.subscribers }}</p>
     <p>Left Days: {{ left_days }}</p>
     <p>Target amount: {{ campaign.goal_amount }}</p>
     <p>Current amount: {{ campaign.current_amount }}</p>
