--- a/templates/home1.html
+++ b/templates/home1.html
@@ -14,35 +14,19 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- Container wrapper -->
-        <div class="container-fluid">
-            <!-- Collapsible wrapper -->
-            <a class="navbar-brand" href="/">Startapp</a>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
-                <!-- Left links -->
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Explore <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/campaigns">Subscribe</a>
-                    </li>
-                    <li class="nav-item">
-
-                    </li>
-                </ul>
-                <button>
-                    <a class="nav-link" href="login">Login</a>
-                </button>
-                <!-- Left links -->
-            </div>
-            <!-- Collapsible wrapper -->
+        <a class="navbar-brand" href="/">Startapp</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Explore <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/campaigns">Subscribe</a>
+                </li>
+            </ul>
         </div>
-        <!-- Container wrapper -->
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-
         <h1>Your platform for exclusive opportunities
             Get-Started</h1>
         <div class="collapse navbar-collapse" id="navbarText">
