--- a/templates/campaign_list.html
+++ b/templates/campaign_list.html
@@ -1,46 +1,129 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <title>Document</title>
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/dashboard/">Startapp</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Explore <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campaigns">Subscribe</a>
-                </li>
-            </ul>
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+            <!-- Collapsible wrapper -->
+            <!-- <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="20" alt="MDB Logo"
+                    loading="lazy" /> -->
+            <a class="navbar-brand" href="/">
+                Startapp</a>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
+                <!-- Left links -->
+                <ul class="navbar-nav mb-2 mb-lg-0">
+
+
+                    <li class="nav-item navl">
+                        <a class="nav-link" href="/">Explore</span>
+                        </a>
+                    </li>
+                    <li class="nav-item active navl">
+                        <a class="nav-link" href="/campaigns">Subscribe</a>
+                    </li>
+
+                </ul>
+                <!-- Left links -->
+            </div>
+            <div class="justify-content-end">
+                <!-- Right links -->
+                <button type="button" class="btn btn-outline-primary"><a style="text-decoration: none;"
+                        href="/logout">Logout</a></button>
+                <!-- Left links -->
+            </div>
+            <!-- Collapsible wrapper -->
         </div>
+        <!-- Container wrapper -->
     </nav>
     <hr>
-    <h1>Campaigns</h1>
-    {% if campaigns %}
-    <ul>
-        {% for campaign in campaigns %}
-        <li>
-            <a href="{% url 'campaign_detail' campaign.id %}">
-                {{ campaign.name }}
-            </a>
-            <br>
-            {{ campaign.description }}
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>No campaigns available.</p>
-    {% endif %}
+    <div class="container mainc">
+
+        <div class=" row search">
+            <h1>Live Opportunities</h1>
+            <div class="campaign-seach-box css-rqs7wq">
+                <form method="get" action="{% url 'campaign_list' %}">
+                    <div class="css-djswmo">
+                        <div class="css-15w7drz">
+                            <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-r4x838" focusable="false"
+                                aria-hidden="true" viewBox="0 0 20 20">
+                                <path d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14ZM19 19l-6-6" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none">
+                                </path>
+                            </svg>
+                        </div>
+                        <input type="text" id="Search" placeholder="Search" class="css-fa4rfl" name="q"
+                            value="{{ request.GET.q }}">
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="row featured">
+            <h1>Featured campaigns</h1>
+            <p>Explore what is trending</p>
+        </div>
+        <section class="row flist">
+            <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top:0px;">
+                {% for campaign in campaigns %}
+                <div class="col">
+                    <div class="card" style="width: 20rem;">
+                        <a href="{% url 'campaign_detail' campaign.id %}">
+                            <img class="card-img-top" src='{{campaign.image.url}}' alt="Card image cap"></a>
+                        <div class="card-body">
+                            <h5 class="card-title">{{ campaign.name }}</h5>
+                            <p class="card-text" style="height: 120px; overflow: hidden">{{ campaign.description }}</p>
+                        </div><a class="btn btn-primary" href="{% url 'campaign_detail' campaign.id %}">
+                            Invest
+                        </a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </section>
+        <div class="row">
+            <div class="featured">
+                <h1>Closed campaigns</h1>
+                <p>Wall of successful startups</p>
+            </div>
+            <section class="row flist">
+                <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top:0px;">
+                    {% for closed_campaigns in campaigns %}
+                    <div class="col">
+                        <div class="card" style="width: 20rem;">
+                            <a href="{% url 'campaign_detail' closed_campaigns.id %}">
+                                <img class="card-img-top" src='{{closed_campaigns.image.url}}' alt="Card image cap"></a>
+                            <div class="card-body">
+                                <h5 class="card-title">{{ closed_campaigns.name }}</h5>
+                                <p class="card-text" style="height: 120px; overflow: hidden">{{
+                                    closed_campaigns.description }}
+                                </p>
+                            </div><a class="btn btn-primary" href="{% url 'campaign_detail' closed_campaigns.id %}">
+                                Invest
+                            </a>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </section>
+        </div>
+
+    </div>
 </body>
 
 </html>
