--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,40 +6,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <title>Document</title>
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Startapp</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Explore <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campaigns">Subscribe</a>
-                </li>
-            </ul>
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+            <!-- Collapsible wrapper -->
+            <a class="navbar-brand" href="/">Startapp</a>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
+                <!-- Left links -->
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item active navl">
+                        <a class="nav-link" href="/">Explore</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  navl">
+                        <a class="nav-link" href="/campaigns">Subscribe</a>
+                    </li>
+                </ul>
+                <!-- Left links -->
+            </div>
+            <div class="justify-content-end">
+                <!-- Right links -->
+                <button type="button" class="btn btn-outline-primary"><a style="text-decoration: none;"
+                        href="/logout">Logout</a></button>
+                <!-- Left links -->
+            </div>
+            <!-- Collapsible wrapper -->
         </div>
+        <!-- Container wrapper -->
     </nav>
     <hr>
-    <h1>👋Welcome, {{ user.username }}!</h1>
+    <div class="container">
+        👋Welcome, {{ user.username }}!
+        <section>
+            <p>Your invested campaigns:</p>
+            <ul>
+                {% for campaign in invested_campaigns %}
+                <!-- <li>{{ campaign.name }}</li> -->
+                <li><a href="/campaigns/{{campaign.id}}">{{ campaign.name }}</a></li>
+                {% empty %}
+                <li>You haven't invested in any campaigns yet.</li>
+                {% endfor %}
+            </ul>
+        </section>
+    </div>
     <!-- <h2><a href="/campaigns/">Browse campaigns</a></h2> -->
-    <p>Your invested campaigns:</p>
-    <ul>
-        {% for campaign in invested_campaigns %}
-        <!-- <li>{{ campaign.name }}</li> -->
-        <li><a href="/campaigns/{{campaign.id}}">{{ campaign.name }}</a></li>
-        {% empty %}
-        <li>You haven't invested in any campaigns yet.</li>
-        {% endfor %}
-    </ul>
+
 </body>
 
 </html>
