--- a/templates/invest.html
+++ b/templates/invest.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,17 +6,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Invest in {{ campaign.name }}</h1>
-    <form method="post" action="{% url 'payment' campaign.id %}">
-        {% csrf_token %}
-        <label for="amount">Amount:</label>
-        <input type="number" name="amount" id="amount">
-        <button type="submit">Invest</button>
-    </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+            <!-- Collapsible wrapper -->
+            <a class="navbar-brand" href="/">Startapp</a>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
+                <!-- Left links -->
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item active navl">
+                        <a class="nav-link" href="/">Explore</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  navl">
+                        <a class="nav-link" href="/campaigns">Subscribe</a>
+                    </li>
+                </ul>
+                <!-- Left links -->
+            </div>
+            <div class="justify-content-end">
+                <!-- Right links -->
+                <button type="button" class="btn btn-outline-primary"><a style="text-decoration: none;"
+                        href="/logout">Logout</a></button>
+                <!-- Left links -->
+            </div>
+            <!-- Collapsible wrapper -->
+        </div>
+        <!-- Container wrapper -->
+    </nav>
+    <hr>
+    <div class="container invmain">
+        <h1 class="css-wdj2vc">Subscribe to {{ campaign.name }}</h1>
+
+        <form method="post" action="{% url 'payment' campaign.id %}">
+            {% csrf_token %}
+            <label for="amount">Amount</label><br>
+            <div class="input-group mb-3 mt-2">
+                <input name="amount" id="amount" placeholder="₹5000 Minimum" class="form-control"
+                    aria-label="Amount (to the nearest dollar)">
+
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg css-nwsp77">Pay</button>
+        </form>
+    </div>
 </body>
 
 </html>
