--- a/templates/login1.html
+++ b/templates/login1.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 
 <body>
     <div class="container py-5">
-        <h1>Register</h1>
+        <h1>Login</h1>
         <form method="POST" action="">
-            {% csrf_token %} {{register_form.as_p}}
-            <button class="btn btn-primary" type="submit">Register</button>
+            {% csrf_token %} {{ login_form.as_p }}
+            <button class="btn btn-primary" type="submit">Login</button>
         </form>
         <p class="text-center">
-            If you already have an account, <a href="login">login</a> instead.
+            Don't have an account? <a href="register">Create an account</a>.
         </p>
     </div>
 </body>
