--- a/templates/campaign_detail.html
+++ b/templates/campaign_detail.html
@@ -79,17 +79,20 @@
                     <div class="progress-bar" role="progressbar" style="width: {{ cur|floatformat:2 }}%"
                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <a href="{% url 'payment' campaign.id %}"><button type="button"
-                        class="btn btn-outline-dark btn-lg sub">Subscribe</button></a>
+                {% if campaign.closed %}
+                <button type="button" class="btn btn-outline-dark btn-lg csub">Subscirbe</button>
+                {% else %}
 
+                <a href="{% url 'payment' campaign.id %}"><button type="button"
+                        class="btn btn-outline-dark btn-lg sub">Subscirbe</button></a>
+                {% endif %}
                 <!-- <p>Current amount: {{ campaign.current_amount }}</p> -->
             </div>
             <div class="col ifr">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RchXmgZpeU8"
-                    title="YouTube video player" frameborder="0"
+                <iframe width="560" height="315" src="{{ campaign.video_link}}" title="YouTube video player"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
             </div>
         </div>
     </div>
