--- a/static/css/main.css
+++ b/static/css/main.css
@@ -312,6 +312,17 @@ hr {
 
 }
 
+.csub {
+    /* background-color: black; */
+    width: 100%;
+    height: 60px;
+    border-radius: 6px;
+    background-color: rgb(230, 230, 230);
+    color: rgb(157, 157, 157);
+    pointer-events: none;
+
+}
+
 .mdetail .cdet {
     margin-top: 37px;
 }
@@ -386,4 +397,130 @@ hr {
     margin: 0px 0px;
     background-color: black;
     width: 99%;
+}
+
+.crh1 h1 {
+    margin: 0px 0px 0.35em;
+    font-weight: 800;
+    line-height: 1.1;
+    font-size: 2.5rem;
+    font-family: Baikal, sans-serif;
+}
+
+.crh1 p {
+    margin: 0px 0px 0.35em;
+    font-size: 1.25rem;
+    line-height: 1.4;
+    font-family: Baikal, sans-serif;
+    font-weight: 400;
+}
+
+
+.crf input {
+    font: inherit;
+    color: #585454;
+    width: 62.5%;
+    border: 1px solid transparent;
+    resize: vertical;
+    display: block;
+    outline: none;
+    padding: 0.75em 1.25em;
+    font-size: 1rem;
+    transition: border-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 5px;
+    margin-bottom: 0.25rem;
+    background-color: #F4F4F3;
+    -webkit-appearance: none;
+}
+
+.crfl input {
+    font: inherit;
+    color: #585454;
+    width: 100%;
+    border: 1px solid transparent;
+    resize: vertical;
+    display: block;
+    outline: none;
+    padding: 0.75em 1.25em;
+    font-size: 1rem;
+    transition: border-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 5px;
+    margin-bottom: 0.25rem;
+    background-color: #F4F4F3;
+    -webkit-appearance: none;
+}
+
+.crfl button:hover {
+    /* opacity: 0.4; */
+    color: white;
+    background-color: #656060;
+}
+
+.crf input::placeholder {
+    color: #585454;
+    opacity: 0.5;
+}
+
+.crf p {
+    font-weight: 600;
+    margin: 0px 0px 0.35em;
+    font-size: 1rem;
+    line-height: 1.4;
+    font-family: Baikal, sans-serif;
+
+}
+
+.logf h3 {
+    margin: 0px 0px 2rem;
+    line-height: 1.2;
+    font-size: 2.5rem;
+    font-family: Baikal, Inter, sans-serif;
+    letter-spacing: -0.045em;
+    font-weight: 800;
+}
+
+.log {
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    position: relative;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    outline: 0px;
+    border: 0px;
+    margin: 12px 0px 0px;
+    cursor: pointer;
+    user-select: none;
+    vertical-align: middle;
+    appearance: none;
+    text-decoration: none;
+    line-height: 1;
+    font-family: Inter, sans-serif;
+    min-width: 64px;
+    padding: 8px 22px;
+    border-radius: 8px;
+    width: 100%;
+    box-shadow: none;
+    text-transform: none;
+    text-align: center;
+    font-size: 1.125rem;
+    height: 3rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(12, 12, 12);
+    font-weight: 600;
+    transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.mal {
+    margin-top: 8rem;
+}
+
+.css-19mvjqo {
+    margin: 2.5rem 0px 1.5rem;
+    flex-shrink: 0;
+    border-width: 0px 0px thin;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.12);
 }
