--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,50 +14,31 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <title>Login</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 </head>
 
 <body>
-    <section class="vh-100">
+    <section class="vh-100 mal">
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-                        class="img-fluid" alt="Sample image">
-                </div>
-                <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 logf crfl">
+                    <h3 class="d-flex justify-content-center align-items-center">Log in</h3>
                     <form method="POST" action="">
-                        {% csrf_token %} {{ login_form.as_p }}
-                        <button class="btn btn-primary" type="submit">Login</button>
+                        <div class="mt-3">
+                            {% csrf_token %}
+                            {% for field in login_form %}
+                            <div class="form-group">
+                                <p class="mt-3">{{ field.label }}</p>
+                                {{ field }}
+                            </div>
+                            {% endfor %}
+                        </div>
+                        <button class="btn btn-lg log mt-3" type="submit">Login</button>
                     </form>
-
+                    <hr class="css-19mvjqo">
+                    <p>Don't have an account? <a href="/register" style="text-decoration: none;">Sign up insted</a></p>
                 </div>
             </div>
-        </div>
-        <div
-            class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-            <!-- Copyright -->
-            <div class="text-white mb-3 mb-md-0">
-                Copyright © 2020. All rights reserved.
-            </div>
-            <!-- Copyright -->
-
-            <!-- Right -->
-            <div>
-                <a href="#!" class="text-white me-4">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="#!" class="text-white me-4">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#!" class="text-white me-4">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="#!" class="text-white">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-            </div>
-            <!-- Right -->
         </div>
     </section>
 </body>
