--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,7 +29,7 @@ button.btn.btn-outline-primary {
 
 .mainc h1 {
     font-weight: 800;
-    font-size: 33px;
+    font-size: 29px;
 }
 
 
@@ -38,6 +38,19 @@ button.btn.btn-outline-primary {
     margin: 0px 70px 0.2rem;
     line-height: 1.2;
     font-size: 2rem;
+    font-family: Baikal, Inter, sans-serif;
+    letter-spacing: -0.045em;
+}
+
+.dsearch h1 {
+    font-weight: 600;
+    font-size: 23px;
+}
+
+.dsearch {
+    padding: 1rem 3rem;
+    margin: 3rem 48px 0px;
+    line-height: 1.2;
     font-family: Baikal, Inter, sans-serif;
     letter-spacing: -0.045em;
 }
@@ -433,6 +446,23 @@ hr {
     -webkit-appearance: none;
 }
 
+.crf textarea {
+    font: inherit;
+    color: #585454;
+    width: 62.5%;
+    border: 1px solid transparent;
+    resize: vertical;
+    display: block;
+    outline: none;
+    padding: 0.75em 1.25em;
+    font-size: 1rem;
+    transition: border-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 5px;
+    margin-bottom: 0.25rem;
+    background-color: #F4F4F3;
+    -webkit-appearance: none;
+}
+
 .crfl input {
     font: inherit;
     color: #585454;
@@ -523,4 +553,8 @@ hr {
     border-width: 0px 0px thin;
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.12);
+}
+
+.nal {
+    margin-left: 5px;
 }
