--- a/templates/create_campaign.html
+++ b/templates/create_campaign.html
@@ -16,14 +16,30 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-bottom: 1px solid #eee;">
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Collapsible wrapper -->
-            <!-- <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="20" alt="MDB Logo"
-                        loading="lazy" /> -->
-            <a class="navbar-brand" href="/">
-                Startapp</a>
+            <a class="navbar-brand mx-5" style="padding: 2px;" href="/">
+                <img src="/media/media/logo.png" alt="Your logo" title="Your logo" style="height:50px;" />
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
+                <!-- Left links -->
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item active navl">
+                        <a class="nav-link" href="/">Explore</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  navl">
+                        <a class="nav-link" href="/campaigns">Subscribe</a>
+                    </li>
+                </ul>
+                <!-- Left links -->
+            </div>
             <div class="justify-content-end">
                 <!-- Right links -->
                 <button type="button" class="btn btn-outline-primary"><a style="text-decoration: none;"
