--- a/templates/home.html
+++ b/templates/home.html
@@ -1,67 +1,138 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <!-- web fonts -->
+    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
+    <!-- //web fonts -->
+    <!-- Template CSS -->
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
     <title>Document</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- Container wrapper -->
-        <div class="container-fluid">
-            <!-- Collapsible wrapper -->
-            <a class="navbar-brand" href="/">Startapp</a>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
-                <!-- Left links -->
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Explore <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/campaigns">Subscribe</a>
-                    </li>
-                    <li class="nav-item">
-
-                    </li>
-                </ul>
-                <button>
-                    <a class="nav-link" href="login">Login</a>
+    <div class="w3l-bootstrap-header fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light p-2">
+            <div class="container">
+                <!-- <a class="navbar-brand" href="index.html"><span class="fa fa-diamond"></span>StartApp</a> -->
+                <a class="navbar-brand" href="/">
+                    <img src="/media/media/logo.png" alt="Your logo" title="Your logo" style="height:50px;" />
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <!-- Left links -->
-            </div>
-            <!-- Collapsible wrapper -->
-        </div>
-        <!-- Container wrapper -->
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
 
-        <h1>Your platform for exclusive opportunities
-            Get-Started</h1>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="logout">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Welcome, {{user.username}}</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="login">Login</a>
-                </li>
-                {% endif %}
-            </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="logout">Logout</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Welcome, {{user.username}}</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                    <div class="form-inline">
+                        <a href="about" style="font-weight: bold;text-decoration: none;color: black;"
+                            class="login mr-4">ABOUT</a>
+                        <a href="login" style="font-weight: bold;text-decoration: none;color: black;"
+                            class="login mr-4">LOGIN</a>
+                        <a href="register" style="font-weight: bold;" class="btn btn-primary btn-theme">Create Free
+                            Account</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <!-- index-block1 -->
+    <div class="w3l-index-block1">
+        <div class="content py-5">
+            <div class="container">
+                <div class="row align-items-center py-md-5 py-3">
+                    <div class="col-md-5 content-left pt-md-0 pt-5">
+                        <h1 style="font-weight: 900;">Startup Fundraising Platform</h1>
+                        <p class="mt-3 mb-md-5 mb-4">Start and manage a professional
+                            fundraise to attract quality accredited investors.</p>
+                        <a href="register" style="font-weight: bold;" class="btn btn-primary btn-theme">Get
+                            Started</a>
+                    </div>
+                    <div class="col-md-7 content-photo mt-md-0 mt-5">
+                        <img src="https://platformcommons.org/wp-content/uploads/2021/01/Creativity-pana.png"
+                            class="img-fluid" alt="main image">
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
         </div>
-    </nav>
+    </div>
+
+    <section class="w3l-market-footer">
+        <footer class="footer-28">
+            <div class="footer-bg-layer">
+                <div class="container py-lg-3">
+                    <div class="container" style="width: 90%;max-width:900px;margin: 0 auto;">
+                        <p class="text-center">the <strong>StartApp</strong> platform</p>
+                    </div>
+                    <div class="footer-top-28">
+                        <div class="footer-list-28 mt-3">
+                            <div class="container" style="width: 90%;max-width:900px;margin: 0 auto;">
+                                <p class="copy-footer-28 text-center"> &copy; 2020 Market. All Rights Reserved. Design
+                                    by <a href="#">StartApp</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="midd-footer-28 align-center py-lg-4">
+                    <div style="width: 90%;max-width:900px;margin: 0 auto;">
+                        <p style="font-size: 11px">
+                            StartApp is a software as a service funding platform. StartApp is not a registered
+                            broker-dealer and does not offer investment advice or advise on the raising of capital
+                            through securities offerings. StartApp does not recommend or otherwise suggest that any
+                            investor make an investment in a particular company, or that any company offer securities to
+                            a particular investor. StartApp takes no part in the negotiation or execution of
+                            transactions for the purchase or sale of securities, and at no time has possession of funds
+                            or securities. No securities transactions are executed or negotiated on or through the
+                            StartApp platform. StartApp receives no compensation in connection with the purchase or sale
+                            of securities.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- move top -->
+        <button onclick="topFunction()" id="movetop" title="Go to top">&#10548;</button>
+        <script>
+            // When the user scrolls down 20px from the top of the document, show the button
+            window.onscroll = function () {
+                scrollFunction()
+            };
+
+            function scrollFunction() {
+                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                    document.getElementById("movetop").style.display = "block";
+                } else {
+                    document.getElementById("movetop").style.display = "none";
+                }
+            }
+
+            // When the user clicks on the button, scroll to the top of the document
+            function topFunction() {
+                document.body.scrollTop = 0;
+                document.documentElement.scrollTop = 0;
+            }
+        </script>
+        <!-- /move top -->
+    </section>
 </body>
 
 </html>
